{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 47,
  "lineage": "1db3ecba-3a66-81b3-d9f9-fe82a7fbea7a",
  "resources": [
    {
      "module": "module.vpc-staging",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_subnet_routed",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0427dce8ac6054d26",
            "domain": "vpc",
            "id": "eipalloc-0634eb003fe5e03b1",
            "instance": "i-062ec0e5e17be93e8",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0a1266e013ebe1ee9",
            "private_dns": "ip-172-16-1-13.eu-central-1.compute.internal",
            "private_ip": "172.16.1.13",
            "public_dns": "ec2-18-192-46-181.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.192.46.181",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc-staging.aws_instance.my_webserver",
            "module.vpc-staging.aws_security_group.web",
            "module.vpc-staging.aws_subnet.routed",
            "module.vpc-staging.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-staging",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_subnet_routed-stuff",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0c8c82e319eb704b9",
            "domain": "vpc",
            "id": "eipalloc-0e31aec56140d3602",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0d72e8e3571ed3c39",
            "private_dns": "ip-172-16-2-47.eu-central-1.compute.internal",
            "private_ip": "172.16.2.47",
            "public_dns": "ec2-18-158-81-40.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.158.81.40",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "staging-nat-gw-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc-staging.aws_subnet.stuff-routed",
            "module.vpc-staging.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-002d070a8b8b08342",
            "domain": "vpc",
            "id": "eipalloc-0d55ef8c05a6f0e83",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-04f7bca5151afe090",
            "private_dns": "ip-172-16-12-151.eu-central-1.compute.internal",
            "private_ip": "172.16.12.151",
            "public_dns": "ec2-3-64-27-145.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.64.27.145",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "staging-nat-gw-2"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc-staging.aws_subnet.stuff-routed",
            "module.vpc-staging.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-staging",
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:556789602792:loadbalancer/staging-ELB-web-cluster-1",
            "availability_zones": [
              "eu-central-1a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "staging-ELB-web-cluster-1-745473614.eu-central-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "staging-ELB-web-cluster-1",
            "idle_timeout": 60,
            "instances": [
              "i-0669cf8190aaa1ca0",
              "i-0e0e5c5f60d3c5008"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "staging-ELB-web-cluster-1",
            "security_groups": [
              "sg-037c882d6f48c6d26"
            ],
            "source_security_group": "556789602792/WebServer Security Group",
            "source_security_group_id": "sg-037c882d6f48c6d26",
            "subnets": [
              "subnet-065c6c21aa9430b11"
            ],
            "tags": {
              "Name": "Test"
            },
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.vpc-staging.aws_security_group.web",
            "module.vpc-staging.aws_subnet.routed",
            "module.vpc-staging.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:556789602792:loadbalancer/staging-ELB-web-cluster-2",
            "availability_zones": [
              "eu-central-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "staging-ELB-web-cluster-2-1133533482.eu-central-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 10,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "staging-ELB-web-cluster-2",
            "idle_timeout": 60,
            "instances": [
              "i-060663d094a51897a",
              "i-0db23d1a317a383bb"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "staging-ELB-web-cluster-2",
            "security_groups": [
              "sg-037c882d6f48c6d26"
            ],
            "source_security_group": "556789602792/WebServer Security Group",
            "source_security_group_id": "sg-037c882d6f48c6d26",
            "subnets": [
              "subnet-09f601b648e0d952d"
            ],
            "tags": {
              "Name": "Test"
            },
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.vpc-staging.aws_security_group.web",
            "module.vpc-staging.aws_subnet.routed",
            "module.vpc-staging.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-staging",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_webserver",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09a4a23815cdb5e06",
            "arn": "arn:aws:ec2:eu-central-1:556789602792:instance/i-062ec0e5e17be93e8",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-062ec0e5e17be93e8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a1266e013ebe1ee9",
            "private_dns": "ip-172-16-1-13.eu-central-1.compute.internal",
            "private_ip": "172.16.1.13",
            "public_ip": "18.192.46.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a38ca653621c318a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-065c6c21aa9430b11",
            "tags": {
              "Name": "test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-037c882d6f48c6d26"
            ]
          },
          "dependencies": [
            "module.vpc-staging.aws_security_group.web",
            "module.vpc-staging.aws_subnet.routed",
            "module.vpc-staging.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-staging",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556789602792:internet-gateway/igw-03cb351d9dae1bd01",
            "id": "igw-03cb351d9dae1bd01",
            "owner_id": "556789602792",
            "tags": {
              "Name": "staging-igw"
            },
            "vpc_id": "vpc-05f3872994c43d14b"
          },
          "dependencies": [
            "module.vpc-staging.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-staging",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e31aec56140d3602",
            "id": "nat-00eb1855952a480cc",
            "network_interface_id": "eni-0d72e8e3571ed3c39",
            "private_ip": "172.16.2.47",
            "public_ip": "18.158.81.40",
            "subnet_id": "subnet-04f2a91f2835ed9d8",
            "tags": {
              "Name": "staging-nat-gw-1"
            }
          },
          "dependencies": [
            "module.vpc-staging.aws_eip.eip_subnet_routed-stuff",
            "module.vpc-staging.aws_subnet.stuff-routed",
            "module.vpc-staging.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d55ef8c05a6f0e83",
            "id": "nat-08adc54a4d0f1fb75",
            "network_interface_id": "eni-04f7bca5151afe090",
            "private_ip": "172.16.12.151",
            "public_ip": "3.64.27.145",
            "subnet_id": "subnet-098571b5d6a4ad7b6",
            "tags": {
              "Name": "staging-nat-gw-2"
            }
          },
          "dependencies": [
            "module.vpc-staging.aws_eip.eip_subnet_routed-stuff",
            "module.vpc-staging.aws_subnet.stuff-routed",
            "module.vpc-staging.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-staging",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_natted",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-023ac665eb0192781",
            "owner_id": "556789602792",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00eb1855952a480cc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging-route-rt_natted-subnets"
            },
            "vpc_id": "vpc-05f3872994c43d14b"
          },
          "dependencies": [
            "module.vpc-staging.aws_eip.eip_subnet_routed-stuff",
            "module.vpc-staging.aws_nat_gateway.gw",
            "module.vpc-staging.aws_subnet.stuff-routed",
            "module.vpc-staging.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-012a594da62fd5ea2",
            "owner_id": "556789602792",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08adc54a4d0f1fb75",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging-route-rt_natted-subnets"
            },
            "vpc_id": "vpc-05f3872994c43d14b"
          },
          "dependencies": [
            "module.vpc-staging.aws_eip.eip_subnet_routed-stuff",
            "module.vpc-staging.aws_nat_gateway.gw",
            "module.vpc-staging.aws_subnet.stuff-routed",
            "module.vpc-staging.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-staging",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_routed",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0427bd43fb42a4b99",
            "owner_id": "556789602792",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03cb351d9dae1bd01",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging-route-rt_routed-subnets"
            },
            "vpc_id": "vpc-05f3872994c43d14b"
          },
          "dependencies": [
            "module.vpc-staging.aws_internet_gateway.gw",
            "module.vpc-staging.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-staging",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_stuff",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08125a4826c9ea9c0",
            "owner_id": "556789602792",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "staging-route-stuff-subnets"
            },
            "vpc_id": "vpc-05f3872994c43d14b"
          },
          "dependencies": [
            "module.vpc-staging.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-staging",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_stuff-routed",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f265a2ff8061642c",
            "owner_id": "556789602792",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03cb351d9dae1bd01",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging-route-stuff-routed-subnets"
            },
            "vpc_id": "vpc-05f3872994c43d14b"
          },
          "dependencies": [
            "module.vpc-staging.aws_internet_gateway.gw",
            "module.vpc-staging.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-staging",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "natted",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec4be6f54f9fd111",
            "route_table_id": "rtb-023ac665eb0192781",
            "subnet_id": "subnet-05f0ad95e0272fdaf"
          },
          "dependencies": [
            "module.vpc-staging.aws_eip.eip_subnet_routed-stuff",
            "module.vpc-staging.aws_nat_gateway.gw",
            "module.vpc-staging.aws_route_table.rt_natted",
            "module.vpc-staging.aws_subnet.natted",
            "module.vpc-staging.aws_subnet.stuff-routed",
            "module.vpc-staging.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0947a8a3c34a5799a",
            "route_table_id": "rtb-012a594da62fd5ea2",
            "subnet_id": "subnet-02988fa8322922fa1"
          },
          "dependencies": [
            "module.vpc-staging.aws_eip.eip_subnet_routed-stuff",
            "module.vpc-staging.aws_nat_gateway.gw",
            "module.vpc-staging.aws_route_table.rt_natted",
            "module.vpc-staging.aws_subnet.natted",
            "module.vpc-staging.aws_subnet.stuff-routed",
            "module.vpc-staging.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-staging",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routed",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0934f9b609ba695bd",
            "route_table_id": "rtb-0427bd43fb42a4b99",
            "subnet_id": "subnet-065c6c21aa9430b11"
          },
          "dependencies": [
            "module.vpc-staging.aws_internet_gateway.gw",
            "module.vpc-staging.aws_route_table.rt_routed",
            "module.vpc-staging.aws_subnet.routed",
            "module.vpc-staging.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ba5f578b3417553",
            "route_table_id": "rtb-0427bd43fb42a4b99",
            "subnet_id": "subnet-09f601b648e0d952d"
          },
          "dependencies": [
            "module.vpc-staging.aws_internet_gateway.gw",
            "module.vpc-staging.aws_route_table.rt_routed",
            "module.vpc-staging.aws_subnet.routed",
            "module.vpc-staging.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-staging",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "stuff",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adb4ec742c15345e",
            "route_table_id": "rtb-08125a4826c9ea9c0",
            "subnet_id": "subnet-0f5aa38b1e81b3e31"
          },
          "dependencies": [
            "module.vpc-staging.aws_route_table.rt_stuff",
            "module.vpc-staging.aws_subnet.stuff",
            "module.vpc-staging.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fc74d9024b5412b",
            "route_table_id": "rtb-08125a4826c9ea9c0",
            "subnet_id": "subnet-00566a5463063e1f8"
          },
          "dependencies": [
            "module.vpc-staging.aws_route_table.rt_stuff",
            "module.vpc-staging.aws_subnet.stuff",
            "module.vpc-staging.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-staging",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "stuff-routed",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064fe55c5679cdb22",
            "route_table_id": "rtb-0f265a2ff8061642c",
            "subnet_id": "subnet-04f2a91f2835ed9d8"
          },
          "dependencies": [
            "module.vpc-staging.aws_internet_gateway.gw",
            "module.vpc-staging.aws_route_table.rt_stuff-routed",
            "module.vpc-staging.aws_subnet.stuff-routed",
            "module.vpc-staging.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013922cb16890cf06",
            "route_table_id": "rtb-0f265a2ff8061642c",
            "subnet_id": "subnet-098571b5d6a4ad7b6"
          },
          "dependencies": [
            "module.vpc-staging.aws_internet_gateway.gw",
            "module.vpc-staging.aws_route_table.rt_stuff-routed",
            "module.vpc-staging.aws_subnet.stuff-routed",
            "module.vpc-staging.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-staging",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556789602792:security-group/sg-037c882d6f48c6d26",
            "description": "SecurityGroup for webservers 22, 80 and 443 open",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037c882d6f48c6d26",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WebServer Security Group",
            "name_prefix": "",
            "owner_id": "556789602792",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f3872994c43d14b"
          },
          "dependencies": [
            "module.vpc-staging.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-staging",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "natted",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556789602792:subnet/subnet-05f0ad95e0272fdaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.16.0.0/24",
            "id": "subnet-05f0ad95e0272fdaf",
            "map_public_ip_on_launch": false,
            "owner_id": "556789602792",
            "tags": {
              "Name": "staging-natted-1"
            },
            "vpc_id": "vpc-05f3872994c43d14b"
          },
          "dependencies": [
            "module.vpc-staging.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556789602792:subnet/subnet-02988fa8322922fa1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.16.10.0/24",
            "id": "subnet-02988fa8322922fa1",
            "map_public_ip_on_launch": false,
            "owner_id": "556789602792",
            "tags": {
              "Name": "staging-natted-2"
            },
            "vpc_id": "vpc-05f3872994c43d14b"
          },
          "dependencies": [
            "module.vpc-staging.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-staging",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "routed",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556789602792:subnet/subnet-065c6c21aa9430b11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-065c6c21aa9430b11",
            "map_public_ip_on_launch": false,
            "owner_id": "556789602792",
            "tags": {
              "Name": "staging-routed-1"
            },
            "vpc_id": "vpc-05f3872994c43d14b"
          },
          "dependencies": [
            "module.vpc-staging.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556789602792:subnet/subnet-09f601b648e0d952d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.16.11.0/24",
            "id": "subnet-09f601b648e0d952d",
            "map_public_ip_on_launch": false,
            "owner_id": "556789602792",
            "tags": {
              "Name": "staging-routed-2"
            },
            "vpc_id": "vpc-05f3872994c43d14b"
          },
          "dependencies": [
            "module.vpc-staging.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-staging",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stuff",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556789602792:subnet/subnet-0f5aa38b1e81b3e31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.16.3.0/24",
            "id": "subnet-0f5aa38b1e81b3e31",
            "map_public_ip_on_launch": false,
            "owner_id": "556789602792",
            "tags": {
              "Name": "staging-stuff-1"
            },
            "vpc_id": "vpc-05f3872994c43d14b"
          },
          "dependencies": [
            "module.vpc-staging.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556789602792:subnet/subnet-00566a5463063e1f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.16.13.0/24",
            "id": "subnet-00566a5463063e1f8",
            "map_public_ip_on_launch": false,
            "owner_id": "556789602792",
            "tags": {
              "Name": "staging-stuff-2"
            },
            "vpc_id": "vpc-05f3872994c43d14b"
          },
          "dependencies": [
            "module.vpc-staging.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-staging",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stuff-routed",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556789602792:subnet/subnet-04f2a91f2835ed9d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.16.2.0/24",
            "id": "subnet-04f2a91f2835ed9d8",
            "map_public_ip_on_launch": false,
            "owner_id": "556789602792",
            "tags": {
              "Name": "staging-stuff_routed-1"
            },
            "vpc_id": "vpc-05f3872994c43d14b"
          },
          "dependencies": [
            "module.vpc-staging.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556789602792:subnet/subnet-098571b5d6a4ad7b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.16.12.0/24",
            "id": "subnet-098571b5d6a4ad7b6",
            "map_public_ip_on_launch": false,
            "owner_id": "556789602792",
            "tags": {
              "Name": "staging-stuff_routed-2"
            },
            "vpc_id": "vpc-05f3872994c43d14b"
          },
          "dependencies": [
            "module.vpc-staging.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-staging",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:556789602792:vpc/vpc-05f3872994c43d14b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0e5e4b06eb3ac7438",
            "default_route_table_id": "rtb-0f76315185aec4858",
            "default_security_group_id": "sg-095d8bc4e759738e5",
            "dhcp_options_id": "dopt-118f337b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05f3872994c43d14b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f76315185aec4858",
            "owner_id": "556789602792",
            "tags": {
              "Name": "staging-vpc"
            }
          }
        }
      ]
    }
  ]
}